2007-04-03  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: freezing version 2.1.4

	* COPYING: freshen author and licensing information using
	./scripts/update-license

	* src/libYARP_OS/src/ShmemTwoWayStream.cpp: added message
	about occasional bad shared memory / hostname configuration 
	interaction problem.  If a shared memory connection fails, the
	following message is shown:
          *** Shared memory connection failed
          Shared memory connections can fail due to a network configuration 
	  problem.  There is a check to make sure shared memory connections 
	  are local, and this check relies on your hostname being configured 
	  well. Possible fixes:
	  - On linux, edit /etc/hosts to link 127.0.0.1 with your hostname
          - (you can find out your hostname with the "hostname" command)
          - On a windows laptop, make sure you have a network card attached
          For up to date information, see mailing list linked on yarp0.sf.net
	Hopefully we'll be able to solve this problem soon, but it has
	been around a long time (inherited from ACE).


2007-03-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: applied patches from Boris Duran to
	fix up methods in ControlBoardInterfaces such as IPositionControl
	that don't get translated well due to use of pointers.
	Motor control from Matlab is now working on fakebot at least :-).

	* src/libYARP_OS/include/yarp/BottleImpl.h: applied patch from
	Tomassino Ferrauto to make copies a little bit less 
	inefficient.

	* src/libYARP_dev/src/ControlBoardInterfacesImpl.inl: propagated 
	return values for a bunch of methods.

2007-03-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpReqLib.cmake: turned "-Wall" on by default for
	UNIX, rather than just when YARP_ADMIN is set.

2007-03-27  Lorenzo Natale  <nat@liralab.it>

	* src/libYARP_OS/src/Thread.cpp: fixed bug, onStop()
	was not called properly.

2007-03-27  Lorenzo Natale  <nat@liralab.it>
