@@ -1,0 +1,50 @@
+#!/bin/sh
+
+# This script helps makes a debian package for yarp
+# call from root as ./scripts/make-better-debian
+
+# The "unofficial" yarp debian packages are built with ./scripts/make-debian
+# This script is to help with a less automated procedure to make packages
+# that may be suitable for submitting to debian for real
+
+
+ORG=$PWD
+BASE=$PWD/better-debian
+
+
+echo "Make sure you call this as ./scripts/make-better-debian"
+
+if [ "k$1" = "k" ]; then
+    echo "Please supply the name of the yarp-*.tar.gz file to work with."
+    exit 1
+fi
+
+mkdir -p $BASE
+rm -rf $BASE/*.tar.gz
+cp $1 $BASE
+
+cd $BASE
+for f in `ls yarp-*.tar.gz`; do
+    orig=`echo $f | sed "s/yarp-/yarp_/" | sed "s/tar/orig.tar/"`
+    name=`echo $f | sed "s/.tar.gz//"`
+    rm -f *.deb
+    rm -f *orig.tar.gz
+    rm -f *.diff.*
+    rm -f *.dsc
+    rm -f *.changes
+    echo "Working with $f"
+    echo "Making $orig"
+    cp $f $orig
+    if [ -e $name ]; then
+	rm -rf $name.old
+	mv $name $name.old
+    fi
+    tar xzf - < $orig
+    cd $name
+    echo "Directory $PWD"
+    mkdir -p debian
+    # careful with this copy, may not be coming from a clean repository
+    cp $ORG/debian/* debian
+    dpkg-buildpackage -rfakeroot
+done
+
